# sky-high-clouds

./: .gitignore  .gitmodules  CMakeCache.txt  CMakeCache.txt.prev  CMakeLists.txt  README.md  build.ninja  cmake_install.cmake  imgui.ini
.cmake/api/v1/reply/: cache-v2-50fc5f7bc45c20a4f9df.json  cmakeFiles-v1-3b398109ffef1816177d.json  codemodel-v2-34d8bb6b1f559686edef.json  directory-dependencies.glfw-Debug-5138ddfb0b7d5b2f40b0.json  directory-dependencies.glfw.src-Debug-a6caadc372de1f9f2efe.json  index-2026-04-15T13-00-46-0537.json  target-StaticGLEW-Debug-5c9fcc16a276fb7c0004.json  target-glfw-Debug-ecaaa2a100efb59842e1.json  target-imgui-Debug-abed4d376b600f9c7157.json  target-skyhighclouds-Debug-bd37a138a3436a78999d.json  target-uninstall-Debug-35cb07e5e12da266edbe.json  target-update_mappings-Debug-89e5c408f59b8936fad2.json
.cmake/api/v1/reply.prev/: cache-v2-c21945d301864969a23a.json  cmakeFiles-v1-043debb056f09f874684.json  codemodel-v2-50d9e2d3e8f91abd45a0.json  directory-dependencies.glfw-Debug-1a9bd97e6ca3dde8f2fd.json  directory-dependencies.glfw.src-Debug-f45d7c33c4b7427292fe.json  index-2026-04-15T13-00-22-0436.json  target-StaticGLEW-Debug-a6cb087e5a81bea7b910.json  target-fluidsim-Debug-0f907a553c5b8325fbc7.json  target-imgui-Debug-4d6b94207ae08c623d39.json
WebGPU/: CMakeLists.txt
WebGPU/dawn/: FetchDawnPrecompiled.cmake
WebGPU/wgpu-native/: FetchWgpuNativePrecompiled.cmake
dawn_precompiled_windows/include/dawn/: dawn_proc_table.h  webgpu_cpp.h  webgpu_cpp_print.h
dawn_precompiled_windows/include/dawn/wire/client/: webgpu.h  webgpu_cpp.h
dawn_precompiled_windows/lib/: webgpu_dawn.lib
dawn_precompiled_windows/lib/cmake/Dawn/: DawnTargets-release.cmake  DawnTargets.cmake
dependencies/imgui/backends/: imgui_impl_wgpu.cpp
glfw3webgpu/: glfw3webgpu.c
resources/: present.wgsl  ray.wgsl
resources/shaders/: shader.frag  shader.vert
src/: Application.cpp  Application.h  Application_gpuData.cpp  ResourceManager.cpp  ResourceManager.h  gpuData.h  grid.cpp  grid.h  gridrenderer.cpp  gridrenderer.h  main.cpp  sdfhandler.cpp  sdfhandler.h  simulation.cpp  simulation.h  tiny_obj_loader.h  window.cpp  window.h
src/graphics/: shader.cpp  shape.cpp  shape.h
